--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+	<link rel="stylesheet" type="text/css" href="/design.css"/>
     </head>         
     <body>          
         <h1>Git</h1>
@@ -9,9 +10,9 @@
 
         <h3>Principais benefícios:</h3>
         <ul>
-            <li>Funciona de maneira distribuída</li>
-            <li>Permite a edição concorrente de arquivos do projeto</li>
-            <li>Não depende de uma conexão ativa com um servidor</li>
+            <li>Funciona de maneir distribuída</li>
+            <li>Permite a edião concorrente de arquivos do projeto</li>
+            <li>Não depende de uma conxão ativa com um servidor</li>
         </ul>
     </body>         
 </html>
